src/objects/Test_Run__c.object
<CustomObject>
    <description>PMO: Test Management. Store all test Runs that based on Test Case.</description>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fail_Result__c</fullName>
        <label>Fail Result</label>
        <summaryFilterItems>
            <field>Test_Result__c.Status__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Result__c.Test_Run__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Iteration_Id__c</fullName>
        <formula>Iteration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Iteration Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Iteration__c</fullName>
        <label>Iteration</label>
        <referenceTo>Iteration__c</referenceTo>
        <relationshipLabel>Test Runs</relationshipLabel>
        <relationshipName>Test_Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_Run__c</fullName>
        <label>No Run</label>
        <summaryFilterItems>
            <field>Test_Result__c.Status__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Result__c.Test_Run__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pass_Rate__c</fullName>
        <formula>Pass_Result__c / Total_Case__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pass Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pass_Result__c</fullName>
        <label>Pass Result</label>
        <summaryFilterItems>
            <field>Test_Result__c.Status__c</field>
            <operation>equals</operation>
            <value>Pass</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Result__c.Test_Run__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Test_By__c</fullName>
        <label>Test By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Plan__c</fullName>
        <label>Test Plan</label>
        <referenceTo>Test_Plan__c</referenceTo>
        <relationshipLabel>Test Runs</relationshipLabel>
        <relationshipName>Test_Plan_Test_Script_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Case__c</fullName>
        <label>Total Case</label>
        <summaryForeignKey>Test_Result__c.Test_Run__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Test Run</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Test Run</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Runs</pluralLabel>
    <recordTypes>
        <fullName>Requirement</fullName>
        <active>true</active>
        <label>Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>UAT</fullName>
        <active>true</active>
        <label>UAT</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>